--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -113,7 +113,7 @@
                     <div class="udam wow bounceInUp"><a href="http://hyeguri.dothome.co.kr/udam/"target="_blank"><img src="images//udam.jpg"></a></div>-->
                     <div class="samsung wow bounceInUp"><a href="http://hyeguri.dothome.co.kr/SAM/"target="_blank"><img src="images//samsung.jpg"></a></div>
                     <div class="bene wow bounceInUp"><a href="http://hyeguri.dothome.co.kr/bene/"target="_blank"><img src="images//bene.jpg"></a></div>
-                    <div class="subway wow bounceInUp"><a href="#"><img src="images/sub.jpg"></a></div>
+                    <div class="subway wow bounceInUp"><a href="http://hyeguri.dothome.co.kr/subway/"><img src="images/sub.jpg"></a></div>
                 </div>
                 
             </div>
