--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -109,8 +109,8 @@
                     <div class="bmca wow bounceInUp"><a href="http://hyeguri.dothome.co.kr/bmca/" target="_blank"><img src="images/bmca.jpg"></a></div>
                     <div class="esta wow bounceInUp"><a href="http://hyeguri.dothome.co.kr/eastarjet/" target="_blank"><img src="images/esta.jpg"></a></div>
                     <div class="hansol wow bounceInUp"><a href="http://hyeguri.dothome.co.kr/hansol/"target="_blank"><img src="images//hansol%20(1).jpg"></a></div>
-                    <!--<div class="hollys wow bounceInUp"><a href="http://hyeguri.dothome.co.kr/hollys/"target="_blank"><img src="images//hollys.jpg"></a></div>
-                    <div class="udam wow bounceInUp"><a href="http://hyeguri.dothome.co.kr/udam/"target="_blank"><img src="images//udam.jpg"></a></div>-->
+                    <div class="hollys wow bounceInUp"><a href="http://hyeguri.dothome.co.kr/hollys/"target="_blank"><img src="images//hollys.jpg"></a></div>
+                    <div class="udam wow bounceInUp"><a href="http://hyeguri.dothome.co.kr/udam/"target="_blank"><img src="images//udam.jpg"></a></div>
                     <div class="samsung wow bounceInUp"><a href="http://hyeguri.dothome.co.kr/SAM/"target="_blank"><img src="images//samsung.jpg"></a></div>
                     <div class="bene wow bounceInUp"><a href="http://hyeguri.dothome.co.kr/bene/"target="_blank"><img src="images//bene.jpg"></a></div>
                     <div class="subway wow bounceInUp"><a href="http://hyeguri.dothome.co.kr/subway/"><img src="images/sub.jpg"></a></div>
