--- a/test.html
+++ b/test.html
@@ -3,8 +3,8 @@
   <head>
     <style>
       .container {
-        width: 500px;
-        height: 500px;
+        width: 100%;
+        height: 100%;
         text-align: center;
       }
       #img,#img2 {
