--- a/test.html
+++ b/test.html
@@ -3,8 +3,7 @@
   <head>
     <style>
       .container {
-        width: 100%;
-        height: 100%;
+        width: 1000px;
         text-align: center;
       }
       #img,#img2 {
